<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RelativeLayoutActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/nameField"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameField"
                android:layout_marginBottom="8dp"
                android:hint="@string/lastNameField"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastNameField"
                android:layout_marginBottom="8dp"
                android:hint="@string/ageField"
                android:inputType="number"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/userField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ageField"
                android:layout_marginBottom="8dp"
                android:hint="@string/userField"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userField"
                android:layout_marginBottom="8dp"
                android:hint="@string/passwordField"
                android:inputType="textPassword"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordField"
                android:layout_marginBottom="8dp"
                android:hint="@string/emailField"
                android:inputType="textEmailAddress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/phoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailField"
                android:layout_marginBottom="8dp"
                android:hint="@string/phoneField"
                android:inputType="phone"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneField"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />
            </RadioGroup>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderRadioGroup"
                android:layout_marginTop="16dp"
                android:text="@string/registerButton"
                android:textSize="24sp" />

            <Button
                android:id="@+id/linearLayoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerButton"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/changeLinearLayout"
                android:textSize="24sp" />

            <Button
                android:id="@+id/constraintLayoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutButton"
                android:text="@string/changeConstraintLayout"
                android:textSize="24sp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>