<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ConstraintLayoutActivity">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nameField"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastNameField"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/nameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/ageField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ageField"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/lastNameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/userField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/userField"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/ageField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordField"
            android:inputType="textPassword"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/userField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailField"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/passwordField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phoneField"
            android:inputType="phone"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/emailField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/relativeLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changeRelativeLayout"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/linearLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changeLinearLayout"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayoutButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>